--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.12.2
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
@@ -14,3 +15,4 @@ python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.2.4
 Werkzeug==0.14.1
+WTForms==2.1
